--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "Soundfile.io Auth client for Vue",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel ./src --presets babel-preset-es2015 --out-dir dist"
   },
   "author": "Matej Drzik",
   "license": "GPL-3.0",
   "devDependencies": {
-    "axios": "^0.16.2"
+    "axios": "^0.16.2",
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
