--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sf-vue-auth",
   "version": "0.2.0",
   "description": "Soundfile.io Auth client for Vue",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel ./src --presets babel-preset-es2015 --out-dir dist"
